--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 # Core Data Handling and Numerics
 pandas>=2.0.0
 numpy>=1.24.0
+scipy>=1.10.0
 
 # Machine Learning and Modeling
 scikit-learn>=1.2.0
 xgboost>=1.7.0
 joblib>=1.2.0
+shap>=0.42.0
 
 # Data Ingestion
 yfinance>=0.2.0
@@ -16,8 +18,7 @@ fredapi>=0.5.0
 plotly>=5.14.0
 dash>=2.9.0
 dash-bootstrap-components>=1.4.0
-shap>=0.41.0
+matplotlib>=3.7.0
 
 # Environment and Configuration Loader
 python-dotenv>=1.0.0
-matplotlib>=3.7.0
