--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ shap>=0.42.0
 yfinance>=0.2.0
 requests>=2.28.0
 fredapi>=0.5.0
+pandas_datareader>=0.10.0
 
 # Dashboard and Visualization
 plotly>=5.14.0
@@ -22,3 +23,6 @@ matplotlib>=3.7.0
 
 # Environment and Configuration Loader
 python-dotenv>=1.0.0
+
+# Production Web Server (Required for Render/Cloud)
+gunicorn>=20.1.0
